# tpl-token-metadata

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs  traits.rs
clients/rust/src/hooked/: holder_delegate_role_seed.rs  metadata_delegate_role_seed.rs
clients/rust/tests/: create.rs  lock.rs  mint.rs
clients/rust/tests/setup/: digital_asset.rs  dirty_clone.rs  mod.rs  token_manager.rs
configs/: codama.cjs  (+4 more)
programs/token-metadata/macro/: Cargo.toml  README.md
programs/token-metadata/macro/src/: lib.rs
programs/token-metadata/program/: Cargo.toml  ProgrammableNFTGuide.md  README.md  rustfmt.toml
programs/token-metadata/program/src/: entrypoint.rs  error.rs  lib.rs  pda.rs
programs/token-metadata/program/src/assertions/: collection.rs  edition.rs  metadata.rs  misc.rs  programmable.rs  uses.rs
programs/token-metadata/program/src/instruction/: bubblegum.rs  burn.rs  collection.rs  delegate.rs  edition.rs  escrow.rs  fee.rs  freeze.rs  metadata.rs  mod.rs  scratchpad.rs  state.rs  uses.rs  verification.rs
programs/token-metadata/program/src/processor/: mod.rs
programs/token-metadata/program/src/processor/bubblegum/: bubblegum_set_collection_size.rs
programs/token-metadata/program/src/processor/burn/: burn.rs  burn_edition_nft.rs  burn_nft.rs  fungible.rs  mod.rs  nonfungible.rs  nonfungible_edition.rs
programs/token-metadata/program/src/processor/close/: mod.rs
programs/token-metadata/program/src/processor/collection/: approve_collection_authority.rs  revoke_collection_authority.rs  set_and_verify_collection.rs  set_and_verify_sized_collection_item.rs  set_collection_size.rs  unverify_collection.rs  unverify_sized_collection_item.rs  verify_collection.rs  verify_sized_collection_item.rs
programs/token-metadata/program/src/state/: asset_data.rs  collection.rs  data.rs  delegate.rs  edition.rs  edition_marker.rs  edition_marker_v2.rs  escrow.rs  fee.rs  master_edition.rs  metadata.rs  mod.rs  programmable.rs  reservation.rs  token_auth_payload.rs  uses.rs
programs/token-metadata/program/src/utils/: collection.rs  compression.rs  fee.rs  master_edition.rs  metadata.rs  mod.rs  programmable_asset.rs  token.rs
programs/token-metadata/program/tests/: approve_use_authority.rs  bump_seed_migration.rs  burn.rs  burn_edition_nft.rs  burn_nft.rs  collection_migrations.rs  collection_sizes.rs  create.rs  create_master_edition.rs  create_metadata_account.rs  delegate.rs  escrow.rs  fees.rs  freeze_authority.rs  freeze_delegated_account.rs  lock.rs  mint.rs  mint_new_edition_from_master_edition_via_token.rs  print.rs  process_legacy_instruction.rs  resize.rs  revoke.rs  revoke_use_authority.rs  seralization.rs  set_collection_size.rs  set_token_standard.rs  sign_metadata.rs  transfer.rs  unlock.rs  unverify.rs  update.rs  update_metadata_account_v2.rs  update_primary_sale_happened_via_token.rs  uses.rs  verify.rs  verify_collection.rs  verify_sized_collection_item.rs
programs/token-metadata/program/tests/utils/: collection.rs  digital_asset.rs  edition_marker.rs  master_edition_v2.rs  metadata.rs  mod.rs  programmable.rs  rooster_manager.rs
(+229 files in other folders)
