[package]
authors = ["Trezoaplex Developers <dev@trezoaplex.com>"]
description = "Trezoaplex Token Metadata SDK"
edition = "2021"
license-file = "../../LICENSE"
name = "tpl-token-metadata"
readme = "README.md"
repository = "https://github.com/trezoaplex-foundation/tpl-token-metadata"
version = "5.1.2-alpha.2"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
borsh = "1.0"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
trezoa-program = "3.0"
trezoa-program-error = "3.0"
thiserror = "^1.0"
kaigan = "0.3.0"

[dev-dependencies]
assert_matches = "1.5.0"
trezoa-program-test = "3.0"
trezoa-sdk = "3.0"
tpl-associated-token-account = { version = "8.0", features = [
  "no-entrypoint",
] }
tpl-token = { version = "9.0", features = ["no-entrypoint"] }
tpl-token-2022-interface = { version = "2.0.0" }
trezoa-system-interface = "2.0.0"
test-case = "3.1.0"
trezoa-pubkey = "3.0"
