[package]
name = "tpl-token-metadata-context-derive"
version = "0.3.0"
edition = "2021"
description = "Trezoaplex Metadata"
authors = ["Trezoaplex Developers <dev@trezoaplex.com>"]
repository = "https://github.com/trezoaplex-foundation/trezoaplex-program-library"
license-file = "../../../LICENSE"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
syn = { version = "1.0.103", features = ["extra-traits", "full"] }
