[package]
authors = ["Trezoaplex Developers <dev@trezoaplex.com>"]
description = "Trezoaplex Metadata"
edition = "2021"
license-file = "../../../LICENSE"
name = "token_metadata"
readme = "README.md"
repository = "https://github.com/trezoaplex-foundation/tpl-token-metadata"
version = "1.14.0"

[features]
no-entrypoint = []
padded = []
resize = []
serde-feature = ["serde", "serde_with"]
test-bpf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.3"
tpl-token-auth-rules = { version = "=1.4.3-beta.1", features = [
  "no-entrypoint",
] }
tpl-token-metadata-context-derive = { version = "0.3.0", path = "../macro" }
tpl-utils = { version = "0.3.6", features = ["tpl-token"] }
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.149", optional = true }
serde_with = { version = "1.14.0", optional = true }
shank = { version = "0.3.0" }
trezoa-program = ">= 1.14.13, < 1.17"
tpl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = [
  "no-entrypoint",
] }
tpl-token-2022 = "0.8.0"
thiserror = "1.0"

[dev-dependencies]
async-trait = "0.1.64"
rmp-serde = "1.1.1"
rooster = { git = "https://github.com/trezoaplex-foundation/rooster", features = [
  "no-entrypoint",
] }
serde = { version = "1.0.147", features = ["derive"] }
trezoa-program-test = ">= 1.14.13, < 1.17"
trezoa-sdk = ">= 1.14.13, < 1.17"
tpl-token = { version = "3.2.0", features = ["no-entrypoint"] }
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]
